# robotics-project

./: .gitignore  LICENSE  README.md
ddqn/: double_dqn.cu
double_dqn/: .gitignore  CMakeLists.txt  README.md  run_socket_test.sh  run_training.sh
double_dqn/include/: cuda_utils.h  dqn_agent.h  environment.h  neural_net.h  socket_utils.h
double_dqn/kernels/: kernels.cu
double_dqn/models/: double_dqn_model_params.txt
double_dqn/src/: main.cpp  main.cu  test_model.cu  test_socket.cu
instructioner/: README.md  sender.cpp  simple_sender_1.cpp  simple_sender_2.cpp
robot/: run_robot.py
socket-server/: .gitignore  README.md  package-lock.json  package.json  server.js
test/: double_dqn.cu
